Fixed : MaterialCollectionSecondary : Icon not aligned RIGHT

--- a/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
+++ b/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
@@ -503,11 +503,11 @@ nav .nav-wrapper .collapsible-body {
 }
 
 .collection .collection-item .secondary-content i {
-	margin-top: -5px;
+	margin-top: -28px;
 }
 
-ul.collection .collection-item .gwt-Label{
-	display: inline;
+ul.collection .collection-item .gwt-Label, ul.collection .collection-item a:first-child{
+	display: block;
 }
 
 @media only screen and (max-width : 992px) {
